[gd_scene load_steps=7 format=3 uid="uid://cgfhnk5b6buhj"]

[ext_resource type="Script" path="res://Title Screen/char_select_button.gd" id="1_ttrh1"]
[ext_resource type="Texture2D" uid="uid://b67jserymk5n6" path="res://Assets/Textures/GUI/EmptyItem.png" id="2_e2b82"]
[ext_resource type="FontFile" uid="uid://cg3hcea6mc3e7" path="res://Assets/Font/tenderness.otf" id="2_jk36r"]
[ext_resource type="Texture2D" uid="uid://cb4trlfrvq5sn" path="res://Assets/Textures/Player/ishtu_icon.png" id="3_cjjek"]
[ext_resource type="AudioStream" uid="uid://dkaytnpd3cnk6" path="res://Assets/Audio/GUI/hover.wav" id="4_ia465"]
[ext_resource type="AudioStream" uid="uid://cvd6i7mt3utna" path="res://Assets/Audio/GUI/click.wav" id="5_bsnlq"]

[node name="Character Select Button" type="ColorRect"]
offset_right = 59.0
offset_bottom = 67.0
color = Color(0.0646466, 0.313287, 0.441678, 1)
script = ExtResource("1_ttrh1")

[node name="InfoPanelBorder" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 59.0
offset_top = 4.0
offset_right = 149.0
offset_bottom = 63.0
texture = ExtResource("2_e2b82")

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 0
offset_top = 5.0
offset_right = 64.0
offset_bottom = 69.0
texture = ExtResource("3_cjjek")

[node name="btn_select" type="Button" parent="."]
layout_mode = 0
offset_right = 156.0
offset_bottom = 67.0

[node name="snd_hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ia465")

[node name="snd_click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_bsnlq")

[node name="lbl_weapon" type="Label" parent="."]
layout_mode = 0
offset_left = 70.0
offset_top = 12.0
offset_right = 129.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("2_jk36r")
theme_override_font_sizes/font_size = 8
text = "weapon: Battle Axe"

[node name="lbl_hp" type="Label" parent="."]
layout_mode = 0
offset_left = 70.0
offset_top = 23.0
offset_right = 111.0
offset_bottom = 34.0
theme_override_fonts/font = ExtResource("2_jk36r")
theme_override_font_sizes/font_size = 8
text = "Health: N/A"

[node name="lbl_speed" type="Label" parent="."]
layout_mode = 0
offset_left = 70.0
offset_top = 34.0
offset_right = 111.0
offset_bottom = 45.0
theme_override_fonts/font = ExtResource("2_jk36r")
theme_override_font_sizes/font_size = 8
text = "Speed: N/A"

[node name="lbl_healrate" type="Label" parent="."]
layout_mode = 0
offset_left = 70.0
offset_top = 45.0
offset_right = 116.0
offset_bottom = 56.0
theme_override_fonts/font = ExtResource("2_jk36r")
theme_override_font_sizes/font_size = 8
text = "Heal Rate: N/A"

[node name="lbl_charSel" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_right = 64.0
offset_bottom = 18.0
theme_override_fonts/font = ExtResource("2_jk36r")
theme_override_font_sizes/font_size = 15
text = "Izra"
vertical_alignment = 1

[connection signal="mouse_entered" from="btn_select" to="." method="_on_btn_select_mouse_entered"]
[connection signal="mouse_exited" from="btn_select" to="." method="_on_btn_select_mouse_exited"]
[connection signal="pressed" from="btn_select" to="." method="_on_btn_select_pressed"]
[connection signal="finished" from="snd_click" to="." method="_on_snd_click_finished"]
